Bazi duzenlemeler yapildi ve Uygulamadan cikis eklendi

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -20,7 +20,7 @@
         app:title="@string/my_favorites">
 
         <TextView
-            android:id="@+id/ivClearFavorite"
+            android:id="@+id/tvClearFavorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
